<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="10dp">

		<LinearLayout
			android:id="@+id/poster_layout"
			android:layout_width="120dp"
			android:layout_height="90dp"
			android:layout_marginRight="10dp"
			android:background="@android:color/white"
			android:padding="2dp">

			<ImageView
				android:id="@+id/poster"
				android:layout_width="120dp"
				android:layout_height="90dp"
				android:contentDescription="@string/app_name"
				android:scaleType="centerCrop"
				android:src="@drawable/no_image" />
		</LinearLayout>

		<TextView
			android:id="@+id/name_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/poster_layout"
			android:text="@string/country_name"
			android:textColor="@color/name_color"
			android:textSize="14dp"
			android:textStyle="bold" />

		<!-- Area -->

		<LinearLayout
			android:id="@+id/layout_area"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/name_text"
			android:layout_marginTop="5dp"
			android:layout_toRightOf="@+id/poster_layout"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_marginRight="5dp"
				android:contentDescription="@string/app_name"
				android:src="@drawable/icon_list" />

			<TextView
				android:id="@+id/area"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/area"
				android:textColor="#F8F8FF"
				android:textSize="12dp" />

			<TextView
				android:id="@+id/area_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/area_text"
				android:textColor="#F8F8FF"
				android:textSize="12dp"
				android:textStyle="bold" />
		</LinearLayout>

		<!-- Population -->

		<LinearLayout
			android:id="@+id/layout_population"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/layout_area"
			android:layout_marginTop="5dp"
			android:layout_toRightOf="@+id/poster_layout"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_marginRight="5dp"
				android:contentDescription="@string/app_name"
				android:src="@drawable/icon_list" />

			<TextView
				android:id="@+id/population"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/population"
				android:textColor="#F8F8FF"
				android:textSize="12dp" />

			<TextView
				android:id="@+id/population_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/population_text"
				android:textColor="#F8F8FF"
				android:textSize="12dp"
				android:textStyle="bold" />
		</LinearLayout>

		<!-- Capital -->

		<LinearLayout
			android:id="@+id/layout_capital"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/layout_population"
			android:layout_marginTop="5dp"
			android:layout_toRightOf="@+id/poster_layout"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_marginRight="5dp"
				android:contentDescription="@string/app_name"
				android:src="@drawable/icon_list" />

			<TextView
				android:id="@+id/capital"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/capital"
				android:textColor="#F8F8FF"
				android:textSize="12dp" />

			<TextView
				android:id="@+id/capital_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/capital_text"
				android:textColor="#F8F8FF"
				android:textSize="12dp"
				android:textStyle="bold" />
		</LinearLayout>
	</RelativeLayout>

	<View
		android:id="@+id/line"
		android:layout_width="fill_parent"
		android:layout_height="0.1dp"
		android:background="#91979B" />

</LinearLayout>